# Echoes-of-Deceit-v2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: agents.yaml  game.yaml  models.yaml
data/situation_puzzles/puzzle1/: puzzle_1_en.json
data/situation_puzzles/puzzle2/: puzzle2.json
data/situation_puzzles/template/: puzzle.json
demo/bak/01/agents_memory/puzzle1/private_a83d3cb2-b3f4-4e1d-ab52-2c163223b869/: config.json
demo/bak/01/agents_memory/puzzle1/private_ceb9a458-786d-45b4-b113-ccb6e881c984/: config.json
demo/bak/01/agents_memory/puzzle1/private_e5f0651c-bfdc-4059-bd69-dd84cb6ee577/: config.json
demo/bak/01/agents_memory/puzzle1/privileged/: config.json  textual_memory.json
demo/bak/01/agents_memory/puzzle1/shared/: config.json
demo/bak/01/rag_storage/: kb_registry.json
demo/bak/01/rag_storage/game_puzzle1/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
demo/bak/01/rag_storage/game_puzzle2/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
demo/bak/01/rag_storage/games/: games_registry.json
docs/: development_plan_turtle_soup_agents_en.md  development_plan_turtle_soup_agents_zh.md  system_design_turtle_soup_agents_en.md  system_design_turtle_soup_agents_zh.md  turtle_soup_rules_en.md  turtle_soup_rules_zh.md
rag_storage/: kb_registry.json
rag_storage/game_puzzle1/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
rag_storage/game_puzzle2/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
rag_storage/games/: games_registry.json
src/: cli.py  play.py
src/config/: __init__.py  loader.py  models.py
src/game/: __init__.py  engine.py  kb_manager.py  session_runner.py
src/game/cli/: __init__.py  app.py  commands.py  formatters.py  main.py
src/game/domain/: __init__.py  entities.py
src/game/graph/: __init__.py  builder.py  nodes.py  runner.py  state.py  tools.py
src/game/memory/: __init__.py  analytics.py  base_store.py  entities.py  file_store.py  manager.py  summarizer.py
src/game/repository/: __init__.py  puzzle_repository.py
src/game/storage/: __init__.py  session_store.py
src/models/: __init__.py  api_client.py  base.py  langchain_client.py  ollama_client.py  registry.py
src/rag/: __init__.py  base_provider.py  knowledge_base.py  lightrag_provider.py  minirag_provider.py  provider_factory.py
src/rag/tools/: __init__.py  kb_loader.py
src/webui/: __init__.py  app.py  async_utils.py  components.py  config.py  game.py  i18n.py  session_state.py
src/webui/pages/: game.py  history.py  home.py  settings.py
tests/: conftest.py  test_analytics.py  test_cli.py  test_cli_main.py  test_config.py  test_domain_entities.py  test_file_memory_store.py  test_game_engine.py  test_graph_builder.py  test_graph_integration.py  test_graph_nodes.py  test_graph_state.py  test_graph_tools.py  test_kb_manager.py  test_memory_entities.py  test_memory_manager.py  test_models.py  test_phase7_nodes.py  test_player_agent.py  test_puzzle_repository.py  test_session_runner.py  test_session_store.py  test_summarizer.py
