[project]
name = "echoes-of-deceit"
version = "0.1.0"
description = "Turtle Soup puzzle game with AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # ==================== Core LLM & AI ====================
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "sentencepiece>=0.1.99",
    "sentence-transformers",
    "tiktoken",
    
    # ==================== LangChain & LangGraph ====================
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    
    # ==================== RAG & Vector DB ====================
    "lightrag-hku[api]>=1.4.8",
    "qdrant-client>=1.7.0",
    "networkx",
    "graspologic",
    
    # ==================== MCP ====================
    "mcp[cli]",
    
    # ==================== Web Framework ====================
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "werkzeug>=3.0.0",
    "streamlit>=1.29.0",
    
    # ==================== HTTP & Async ====================
    "requests>=2.28.0",
    "aiohttp",
    "aiofiles",
    "httpx",
    "nest-asyncio>=1.5.0",
    
    # ==================== Document Processing ====================
    "pdfplumber>=0.10.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.0.0",
    "python-pptx",
    
    # ==================== NLP & Text Processing ====================
    "nltk>=3.8.0",
    "rouge>=1.0.1",
    
    # ==================== Data & Config ====================
    "pyyaml>=6.0",
    "pydantic",
    "numpy",
    "protobuf>=3.20.0",
    "configparser",
    "python-dotenv",
    "json-repair",
    
    # ==================== CLI ====================
    "click>=8.0.0",
    
    # ==================== Utilities ====================
    "tqdm",
    "tenacity",
    "xxhash",
    "setuptools",
    "pipmaster",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
echoes = "src.cli:main"
play = "src.play:main"

# ==================== Git Dependencies ====================
[tool.uv.sources]
minirag = { git = "https://github.com/Linorman/MiniRAG.git" }
memos = { git = "https://github.com/Linorman/MemOS.git" }

# ==================== UV Configuration ====================
[tool.uv]
# Development mode dependencies
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ==================== Tool Configurations ====================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
